--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -1,8 +1,5 @@
 name: Deploy Website
-on:
-  push:
-    tags:
-      - '*'
+on: {push: {branches: [main]}}
 jobs:
   deploy:
     runs-on: ubuntu-latest
