--- a/.github/workflows/deploy-docker-image.yml
+++ b/.github/workflows/deploy-docker-image.yml
@@ -1,7 +1,8 @@
 name: Deploy Docker Image
 on: {push: {tags: ['*']}}
 jobs:
-  build:
+  deploy-docker-image:
+    name: Deploy Docker Image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
