--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ authors:
   email: michael@mhuttner.com
 git:
   # The `student` property specifies the URL to the public repository that should be readable to everyone, in particular to students taking the course. The URL must include an access token, so the URNC can push content to it. In a real course the main repository would be private, with only lecturers having access. In such a case the access token can be specified as plain text, because only authorized people can see it. In this example course we cannot do that, because this repository is public as well, therefore we set the access token as environment variable during the corresponding Github Action.
-  student: "https://urnc:${ACCESS_TOKEN_URNC_EXAMPLE_COURSE_PUBLIC}@git.github.com/spang-lab/urnc-example-course.git"
+  student: "https://github.com/spang-lab/urnc-example-course-public.git"
   # The exclude property contains a set of file patterns that urnc will ignore when pushing to the public repository. The patterns must be written in .gitignore style (https://git-scm.com/docs/gitignore) and are actually appended to the public repository's .gitignore file before urnc pushes to it. Example:
   # exclude:
   # - container/
