--- a/lectures/_toc.yml
+++ b/lectures/_toc.yml
@@ -2,4 +2,7 @@
 format: jb-book
 root: index
 chapters:
-- file: example.ipynb
+- file: 01_getting_started.ipynb
+- file: 02_urnc_usage.ipynb
+- file: 03_creating_courses.ipynb
+- file: 04_getting_help.ipynb
