--- a/.github/workflows/deploy-docker-image.yml
+++ b/.github/workflows/deploy-docker-image.yml
@@ -9,8 +9,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Extract version from tag
+        id: version
+        run: echo "::set-output name=version::${GITHUB_REF/refs\/tags\/v/}"
       - name: Build and push Docker image
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: docker buildx build --platform linux/amd64,linux/arm64 -t thespanglab/urnc-example-course:${{ github.ref }} -t thespanglab/urnc-example-course:latest --push container
+        run: docker buildx build --platform linux/amd64,linux/arm64 -t thespanglab/urnc-example-course:${{ steps.version.outputs.version }} -t thespanglab/urnc-example-course:latest --push .
