--- a/.github/workflows/deploy-docker-image.yml
+++ b/.github/workflows/deploy-docker-image.yml
@@ -16,4 +16,4 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: docker buildx build --platform linux/amd64,linux/arm64 -t thespanglab/urnc-example-course:${{ steps.version.outputs.version }} -t thespanglab/urnc-example-course:latest --push .
+        run: docker buildx build --platform linux/amd64,linux/arm64 -t thespanglab/urnc-example-course:${{ steps.version.outputs.version }} -t thespanglab/urnc-example-course:latest --push container
